public interface IMemento {
}
